--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;500;700;900&display=swap"
         rel="stylesheet">
     <!-- 本地css -->
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 
@@ -34,9 +34,9 @@
                 </button>
                 <div class="me-auto collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto link ">
-                        <a class="nav-link " aria-current="page" href="https://dev.robinstech.com.tw/intro/">首頁</a>
+                        <a class="nav-link" href="https://dev.robinstech.com.tw/intro/">首頁</a>
                         <a class="nav-link" href="#">公司簡介</a>
-                        <a class="nav-link" href="#">團隊介紹</a>
+                        <a class="nav-link" href="#" target="_self">團隊介紹</a>
                         <a class="nav-link" href="#">關於羅賓斯科技</a>
                         <a class="nav-link" href="https://www.104.com.tw/company/1a2x6bm4zj" target="_blank">招募訊息104</a>
                     </div>
