--- a/team.html
+++ b/team.html
@@ -19,9 +19,29 @@
 </head>
 
 <body>
-  <header>
-    <!-- place navbar here -->
-  </header>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light navTop">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <!-- <h3 class="text-primary">羅賓斯科技</h3> -->
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="me-auto collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto link ">
+                        <a class="nav-link" href="https://dev.robinstech.com.tw/intro/">首頁</a>
+                        <a class="nav-link" href="#">公司簡介</a>
+                        <a class="nav-link" href="#" target="_self">團隊介紹</a>
+                        <a class="nav-link" href="#">關於羅賓斯科技</a>
+                        <a class="nav-link" href="https://www.104.com.tw/company/1a2x6bm4zj" target="_blank">招募訊息104</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
   <main>
 
   </main>
